<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tieu_de"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:textColor="#090909"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_25sdp"
        />
    <Button
        android:id="@+id/btnDe"
        style="@style/FrPlayBtn"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn1"
        android:text="@string/btnDe"
        app:backgroundTint="#82FA57" />

    <Button
        android:id="@+id/btnTrungbinh"
        style="@style/FrPlayBtn"
        android:background="@drawable/btn1"
        android:text="@string/btn_tb"
        app:backgroundTint="#82FA57" />

    <Button
        android:id="@+id/btnKho"
        style="@style/FrPlayBtn"
        android:background="@drawable/btn1"
        android:text="@string/btn_hackNao"
        app:backgroundTint="#82FA57" />

</LinearLayout>