<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:id="@+id/emptyScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noData"
        android:textSize="@dimen/_14sdp"
        android:textColor="#FD0505"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BestScore"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/tvBestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="200"
            android:textColor="#FB0303"
            />
        <TextView
            android:textAlignment="center"
            android:textSize="@dimen/_13sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nearScore"
            android:textColor="#000000"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
        <ListView
            android:id="@+id/listScore"
            android:layout_width="@dimen/_280sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>